# stm32-ai-deployer-app

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
docs/: PROJECT.md  factory_simulation_plan.md  lstm_stm32_export.md  n6_kaldigimiz_yer.md  protocol_v1.md
qml/: Main.qml  Theme.qml  qmldir
qml/components/: AppButton.qml  Card.qml  ComboField.qml  DataTable.qml  FormField.qml  InfoCard.qml  MetricBar.qml  MetricIcon.qml  SectionHeader.qml  StatusPill.qml  Terminal.qml  TitleBar.qml  TopTabBar.qml
qml/dialogs/: AboutDialog.qml  PipelineWizard.qml  SettingsDialog.qml
qml/factory/: FactoryDashboard.qml  FactoryMap.qml  FactorySimWindow.qml  NodeDetail.qml  ZoneDetail.qml
qml/factory/components/: AlarmFeed.qml  NodeMarker.qml  SensorRow.qml  ZoneBlock.qml
qml/mock/: MockData.qml
qml/screens/: AnalysisScreen.qml  BenchmarkScreen.qml  BoardScreen.qml  DashboardScreen.qml  FlashScreen.qml  MonitorScreen.qml
resources/: app.qrc  style.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/bridge/: Backend.cpp  Backend.h
src/core/: AppSettings.cpp  AppSettings.h  AppState.cpp  AppState.h  TemplateEngine.cpp  TemplateEngine.h  ToolDetector.cpp  ToolDetector.h
src/modules/analysis/: AnalysisManager.cpp  AnalysisManager.h
src/modules/board/: BoardManager.cpp  BoardManager.h  BoardPresets.h
src/modules/flash/: CliRunner.cpp  CliRunner.h  FlashManager.cpp  FlashManager.h  PipelineConfig.h  PipelineRunner.cpp  PipelineRunner.h  XCubeAIRunner.cpp  XCubeAIRunner.h
src/modules/serial/: CircularBuffer.h  PacketParser.cpp  PacketParser.h  SerialManager.cpp  SerialManager.h  SerialSimulator.cpp  SerialSimulator.h  SerialWorker.cpp  SerialWorker.h
src/modules/simulation/: FactorySimulator.cpp  FactorySimulator.h
src/ui/: AnalysisTab.cpp  AnalysisTab.h  BenchmarkTab.cpp  BenchmarkTab.h  BoardTab.cpp  BoardTab.h  FlashTab.cpp  FlashTab.h  MonitorTab.cpp  MonitorTab.h  PipelineWizard.cpp  PipelineWizard.h  SettingsDialog.cpp  SettingsDialog.h  Sidebar.cpp  Sidebar.h  SplashScreen.h
st_ai_benchmark_output/: network_c_info.json
templates/: README.md
templates/ai_glue/: ai_runner.c  ai_runner.h  uart_report.c  uart_report.h
templates/base/STM32F4/: Makefile  STM32F407VGTx_FLASH.ld  startup_stm32f407xx.s
templates/base/STM32F4/Inc/: ai_config.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
templates/base/STM32F4/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
templates/base/STM32H7/: Makefile  STM32H723ZGTx_FLASH.ld  startup_stm32h723xx.s
templates/base/STM32H7/Inc/: ai_config.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
templates/base/STM32H7/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
templates/base/STM32N6/: Makefile  STM32N6xx_FLASH.ld  startup_stm32n6xx.s
templates/base/STM32N6/Inc/: ai_config.h  main.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
templates/base/STM32N6/Src/: main.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c  system_clock_stub.c
templates/sensors/BME280/: bme280.c  bme280.h
templates/sensors/MPU6050/: mpu6050.c  mpu6050.h
templates/sensors/PDM_MIC/: pdm_mic.c  pdm_mic.h
